Update README, improve code quality, and add GitHub review
- Simplify README installation instructions
- Improve error handling in memory.py (OSError handling, clock skew tolerance)
- Update .gitignore to include coverage files and temporary exploration files
- Remove empty template files (EXPLORATION_FINDINGS.md, TIDY_AND_TEST_REPORT.md)
- Code cleanup across multiple modules
- Add GITHUB_REVIEW.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ cognee/
 # Temporary/duplicate files
 * 2.py
 * 2.*
+
+# Coverage reports
+.coverage
+.coverage.*
+coverage.xml
+htmlcov/
+
+# Temporary exploration files
+EXPLORATION_FINDINGS.md
+TIDY_AND_TEST_REPORT.md
